--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .git
-backend/__pycache__
+__pycache__
 venv
 frontend/.git
 frontend/node_modules
