--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,9 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "cross-env BROWSER=none react-scripts start",
+    "scripts": {
+    "start": "react-scripts start",
+    "start:windows": "set BROWSER=none&& react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
